--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,8 @@ mainClassName="com.tw.mritunjd.marserover.MarsRover" // Change it to your main c
 repositories { mavenCentral() }
 
 dependencies {
-    testCompile 'junit:junit:4.10'
+    testCompile 'junit:junit:4.10' , 'org.mockito:mockito-all:1.9.5'
 }
-
 sourceSets {
     main.java.srcDir 'src'
     test.java.srcDir 'test'
