added option to compile with uncheck and unsafe

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,13 @@ repositories { mavenCentral() }
 dependencies {
     testCompile 'junit:junit:4.10' , 'org.mockito:mockito-all:1.9.5'
 }
+
+allprojects {
+    tasks.withType(Compile) {
+        options.compilerArgs += ["-Xlint:deprecation", "-Xlint:unchecked"]
+    }
+}
+
 sourceSets {
     main.java.srcDir 'src'
     test.java.srcDir 'test'
